2002-06-15  Earnie Boyd  <earnie@users.sf.net>

	* Makefile.in (conf_prefix): New variable.
	(dist_prefix): Ditto. Conditionally set to $(conf_prefix).
	(bindist): Use dist_prefix.

2002-06-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/_mingw.h: Increment version to 2.0.
	* Makefile.in: Ditto.

	Merge in mingwex branch.

	2002-06-11  Danny Smith  <dannysmith@users.sourceforge.net>
	* include/math.h (fdim, fdimf, fdiml): Add prototypes.
	* mingwex/fdim.c: New file.
	* mingwex/fdimf.c: New file.
	* mingwex/fdiml.c: New file.
	* mingwex/Makefile.in (DISTFILES): Add fdim.c, fdimf.c,
	fdiml.c.
	(MATHOBJS):Add fdim.o, fdimf.o. fdiml.o.

	2002-05-23  Danny Smith  <dannysmith@users.sourceforge.net>
	* mingwex/Makefile.in (DISTFILES): Add truncf.c, truncl.c.

	2002-05-22  Danny Smith  <dannysmith@users.sourceforge.net>
	* mingwex/isnanl.c: New file.

	2002-05-21  Danny Smith  <dannysmith@users.sourceforge.net>
	* include/stdint.h: Include stddef.h to get
	wchar_t and wint_t.
	(WINT_MAX): Define to ((wint_t)-1).

	2002-05-21  Danny Smith  <dannysmith@users.sourceforge.net>
	* include/wctype.h: Replace 'inline' with '__inline__'.
	* include/inttypes.h: Likewise.

	2002-05-16  Danny Smith  <dannysmith@users.sourceforge.net>
	* include/_mingw.h (__MINGW_IMPORT): Put extern at start 
	to avoid warnings.  Thanks to: Oscar Fuentes  <ofv@wanadoo.es>.

	2002-05-16  Danny Smith  <dannysmith@users.sourceforge.net>
	* mingwex/snprintf.c: Split out vsnprintf to....
	* mingwex/vsnprintf.c: New file.
	* mingwex/snwprintf.c: Split out vsnwprintf to...
	* mingwex/vsnwprintf.c: New file.
	* mingwex/Makefile.in: Adjust DISTFILES and STDIO_STUB_OBJS.

	2002-05-15  Pascal Obry  <obry@gnat.com>
	* include/dirent.h (DIR): Change dd_stat type to int.
	(_WDIR): Likewise.

	2002-05-07  Danny Smith  <dannysmith@users.sourceforge.net>
	* include/stdio.h (vsnprintf): Change inline to __inline__;
	(vsnwprintf): Likewise.
 	* include/wchar.h (vsnwprintf): Likewise.
	(wcstof): Likewise.